blog: post index page is now post index, not post archive. Post archive templates are now for the actual archive.

--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -9,6 +9,7 @@ menu:
 tags:
   - announcements
   - interactive-features
+  - v0.0.1
 metas:
   lang: en
   description: Ideas for interactive features that could ship with the first beta version of Cushy Text.
@@ -40,7 +41,11 @@ plus DenoKV, made it the right choice because it unlocks so many other possibili
 
 {/*more*/}
 
-Some additional text here.
+It would be much more work to maintain features that would be less convenient to 
+use in order to maintain a theme that worked everywhere, so the decision was made
+to take full advantage of running on Deno Deploy and deliver a great experience 
+there, rather than an underwhelming experience everywhere that requires lots of 
+configuration.  
 
 ## Another Heading
 
