docs: back to mdx, use the docs layout

--- a/src/docs/blog-feature.mdx
+++ b/src/docs/blog-feature.mdx
@@ -1,6 +1,8 @@
 ---
-title: The Blog Directory Feature
-order: 2
+title: How Blog Generation Works
+menu:
+  visible: true
+  order: 3
 ---
 
 # How Does `/blog` And The Blog Feature Work?
