--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -1,6 +1,8 @@
 ---
 title: Working With And Making Components
-order: 1
+menu:
+  visible: true
+  order: 2
 ---
 
 # How Do I Use And Create New Feature Components?
