--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Overview, Status & Getting Started
 menu:
-  visible: false
+  visible: true
+  order: 0
 ---
 
 # Current Status: <span class="text--danger">Alpha & Unstable.</span>
@@ -42,10 +43,10 @@ middleware.
 
  - Blog / Tag archive pages need some love. I just created rough stubs.
 
- - Docs auto nav doesn't deal with nested directories very well. Also
-   need some way to pass custom sidebar designs? thinking about it.
+ - Docs auto nav doesn't deal with nested directories very well.
 
- - A long list of additional plugins, like the OG Image Generator 
+ - A long list of additional plugins, like the OG Image Generator, need 
+   installed, configured, tested and tweaked.
 
  - I also need to finish the open dyslexic font switcher.
 
@@ -53,13 +54,6 @@ middleware.
    blog posts, three markdown document pages, one landing page). 
 
 ## Known Issues
-
- - Lume TOC plugins don't yet work with the new SSX flavor of MDX. I expect
-   this to change before Lume3 is officially released.
-
- - Code highlighting plugins don't yet work with the new SSX flavor of MDX. Like
-   the TOC issue, I expect this to be fixed before Lume3, so I'm not doing anything
-   to work around it.
 
  - Lots of pages on this site are incomplete.
 
