blog: content updates

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -22,128 +22,91 @@ metas:
   generator: true
 ---
 
-My career in DevRel & Comminity made me responsible for setting up dozens of documentation
-sites, blogs and community portals for developer tools. Spending almost a decade working 
-for Stack Overflow gave me a special sensitivity for the kind of experience that people who
-create or maintain a lot of documentation want out of their tools.
+There's a great Lume theme for pretty much every occasion now: building a wiki, starting 
+a blog, promoting an event, publishing an ebook, sharing research - and  they're _all_ 
+fantastic. I learned a lot about strategy when it comes to generating sites intelligently
+by studying and using them.
+
+There's always been something missing, though: a theme that lets me do _all_ of that in 
+a cohesive way with unified search that doesn't feel all duct-taped together. I wanted
+to be able to generate docs from many small collections of markdown files, run multiple
+blog instances with independent archives, build content and landing pages and have 
+interactive features that take advantage of Deno & Deno Deploy ready to use.
 
 <img class="blog_image" src="/uploads/announcing-cushy-text.jpg" alt="" title="" />
 
-I spent years as an early-stage consultant with newly-funded companies that needed help
-spreading the word about their tools, which gave me a lot of experience with different kinds
-of text-focused platforms. Gatsby, Docusaurus, Astro and many others are great at what they
-do, but I found myself only using and knowing about 35% of their overall features, despite 
-lofty sizes.
+So, I created one! And, I named it Cushy Text!
 
-Other Preact-based alternates like Deno's Fresh framework began to look promising, but they
-didn't have all the automatic comforts that the established Node-based frameworks did. That's
-when I found Lume and realized just how easy it would be to port Infima CSS over to it, and 
-create the minimum features that I wanted in a "go to" self-publishing framework.
+{/* more */}
 
-{/*more*/}
+## Multi-Instance / Multi-Archetype / Central Search & Design
 
-I wanted to be able to have an easy blog, the ability to throw a bunch of markdown files
-in a directory and end up with a nice auto-generated documentation section independent 
-of the blog, easy component-driven landing and content pages, interactive content feedback
-features and form handlers, a comprehensive and fully-customizeable search and the familiar
-and vetted Infima CSS framework.
+The theme allows you to run multiple blogs independent tags, archive pages, author 
+pages, feeds and even designs all on the same URL. I wanted to be able to have a 
+very basic status blog, release notes blog, and main blog, as an example.
 
-I also wanted to have all the great plugins already installed and optimally configured to 
-work together, like OG Image auto-generation, Image processing and re-sizing plugins,
-all of the SEO-related plugins, MDX with SSX, and pre-configured middleware that Works
-the same locally as it does remotely.
+But blogs are only one content archetype that Cushy Text supports, it also supports
+multi-instance documentation folders, similar to wiki themes, as well as MDX powered
+content and landing pages. 
 
-Finally, I knew it would need a plugin to help provide some of the functionality and 
-provide safety so that people don't get confusing errors if they use features incorrectly.
+All of these under Infima CSS, one of the most versatile CSS frameworks for text-heavy
+static websites, with centralized search powered by Pagefind and Lume 3 middleware.
 
-## It Began As Cushy Docs, Quickly Went To Cushy Text
+## Interactive Features Included
 
-I wanted something I would have been happy to have in my hands each time I was tasked with 
-setting up a presence to support something new. That's not always documentation, I also like
-to write serial fiction and biography content, too. I wanted something nice for anyone that 
-works with a lot of, well, text.
+Because Lume 3's router middleware makes form handling so convenient, and because DenoKV
+is zero configuration on Deno Deploy and falls back to Sqlite3 locally, it's easy to ship
+interactive features that "just work" without configuration.
 
-Rather than think of using a different theme for each kind of thing, I decided to put Infima
-to task on creating archetypes to support lots of things in the same place. So far, we have
-the following archetypes:
+You'll get a content rating system (_was this page helpful?_ kind of component) as well
+as a contact form and submission handler.
 
- - Documentation Style Site
- - Blog With Archive, Tag & Author Pages
- - Blog With No Archive (a special release-notes archetype)
- - Inner Content Page (MDX) with navigation
- - Landing Page (MDX) without navigation (grid demo)
+More things may get added as a generally-available release nears.
 
-The archetypes rely on a few special settings in the per-directory `_data.yml` files that
-apply a default layout and special archetype tag `%archetype_name%`, like `%docs%` which 
-isn't shown, but can be used to build navigation and filter searches. A base directory is
-also set up, which serves as a navigation anchor for auto-generation.
+It's time for static sites to liven things up a bit!
 
-This lets you have, say, 4 independent documentation archetypes and two blogs going at once, 
-all with independent nav and tags, but searchable and filterable together as one along with
-inner content pages.
+## Deno Deploy + Deno KV Required
 
-Wanna make a new landing page? Easy! Type:
+Originally, I wanted to build an interactive theme that would conceivably work on any
+host that offered Deno in some form (like Netlify), but two key things drove the decision
+to just require Deno Deploy:
 
-```bash
-lume new landing_page "try our new widget"
-```
+ - DenoKV solves all the dev / production issues surrounding interactive content, and, 
+ - Lume 3 Middleware needs Deno to run _anyway_, so, 
 
-The file will be created with all the necessary frontmatter, and a little demo content with 
-components you can use if you need a base to start with.
+I'm just going to focus development with the idea that we'll be running on Deploy. It would
+not be hard to modify the default middleware that this theme comes with to use Postgres 
+or even Redis, if you wanted to host on your own VPS or use Netlify edge functions.
 
-## If There's A Framework For Building Around Lume3 Components, It's Infima.
+## Component-Focused, But Not Strict 
 
-(Arguably, this could be said about many, but I picked Infima)
+Infima CSS has a lot of individual components that can easily be broken out into smaller
+CSS files and small bits of helper Javascript so that they can be loaded only when needed. 
+This aligns perfectly with Lume 3's re-designed components, and for brand new sites, you
+get the satisfaction of knowing unused code never gets loaded.
 
-Infima breaks out all styles and supporting JS to individual modules for every componenent
-that it comes with. Lume3, now supporting async components by default, also recently went 
-with a structure where components can ship a template, css, and js file which all get loaded
-just-in-time when the component is used.
+If you use Infima and want to port existing markup over, that's fine too - you can use a 
+version of the stylesheet that loads all of the component bits, so you can use the markup
+anywhere. 
 
-This means for brand new sites (if you're not going to import a lot of HTML using infima 
-component classes directly), your pages will only have component scripts and styles if 
-components get loaded on the page.
+In all honesty it's splitting hairs, because it's only a few hundred lines of CSS and JS
+combined, but _its the point, darn it!_
 
-This, combined with plugins that garbage collect any unused classes and optimize scripts
-plus brotli compression will result in performance as a feature.
+## Loaded Like A Baked Potato With plugins
 
-## A Little Interactivity Is Good!
+Apologies if you don't like potatoes. Cushy Text aims to ship with pre-configured plugins 
+covering SEO, Content Optimization, Feeds, Engagement and More. The idea is to help you 
+spend time writing and curating, not configuring plugins, unless you wanna.
 
-The theme will ship with a content-rating system that utilzes local storage and DenoKV as
-its backend. It'll ask users how they felt about what they read, allow for voting and even
-some free-form feedback. There's no need to worry about edge functions, as Lume's built-in
-server middlware makes processing form submissions and KV querying pretty easy. 
+I'm including my own SEO plugin that does static analysis checks of pages to make sure
+things like lengths, common word densities, meta info and everything else is set as 
+optimally as possible. 
 
-There will also be a generic contact form and handler, and maybe even a feature logger.
+## Responsive And Accessible
 
-Don't worry - it all works the same locally as it does in production. 
+Infima is notorious for being easy to build responsive sites with. But I also want to go 
+the extra mile and make sure it's optimized for screen readers, offers font alternatives 
+like "Open Dyslexic", obeys user preferences for theme and motion and is easy to translate.
 
-## Responsive + Accessible = Enjoyable.
-
-Infima makes creating accessible and responsive websites easier than most framworks of its 
-type, but mostly through example (e.g. Docusaurus). I wanted to make sure that wasn't lost 
-when I brought it over to Infima. 
-
-When it comes to accessibility, being disabled myself, I'm a major stickler. Out of the box, 
-it's ideal to offer dark and light themes, reduced motion, proper semantic structure for readers
-and all while obeying the user's system preferences.
-
-This theme additionally offers users a dyslexic-friendly font for longer text, called Open Dyslexic,
-which can be toggled just like light / dark mode. In fact, the button is a D in a circle, and located
-right next to the dark / light switcher.
-
-## You Keep The Ability To "Just Make It Work".
-
-While we'll have nice auto-loading components and efficient use of scripts and CSS, sometimes,
-you just need to cobble something presentable together quickly and just make it work.
-
-Infima ships with plenty of helper classes to tweak margins and padding and placement of things,
-but you can also use a variety of third-party Markdown plugins, just like you could use in any 
-other Lume site. There's no guarded, rigid configuration to contend with. 
-
-You could totally drop everything and load jQuery; the theme will still work just fine. While
-it ships with a lot of cool features, it's still just a theme, and meant to be completely 
-changed and customized so it works as well for you as it does for me. 
-
-You won't feel like you're going "against" a platform, unless you do something to make Lume 
-mad at you, but that goes with any theme.
+All of that's baked into goals from the start, even if it takes a few versions of massive
+DOM reorganizations before we can say it's living up to it.
