--- a/src/features/localization.mdx
+++ b/src/features/localization.mdx
@@ -4,3 +4,15 @@ layout: layouts/page.vto
 ---
 
 # Ready For Translation!
+
+This site will, soon, also be available in more than the default 
+English. All strings have been kept in external files and have 
+context in comments where needed.
+
+## Not Sure How To Structure Internationalization
+
+I'm still haggling over how best to implement a language 
+switcher. As versioning isn't planned, this helps to simplify how
+we go about it.
+
+If you're interested in helping out with this, get in touch!
