nav & content update

--- a/src/features/accessibility.mdx
+++ b/src/features/accessibility.mdx
@@ -3,7 +3,45 @@ title: Accessibility And Responsiveness
 layout: layouts/page.vto
 ---
 
-# Why it matters.
+# {title}
 
-## Open Dyslexic
+As a disabled person, accessibility matters a lot to me. It feels
+bad when you know that, with not a lot of effort, web sites could be
+making your experience so much better, but they choose not to.
+
+Here's where the theme is with accessibility:
+
+## Theming (Dark / Light)
+
+This is good. I improved a little on the default way the theme managed
+both light and dark styles.
+
+## Theming (Font)
+
+I'll have a font selector to switch configurable text to Open Dyslexic
+on demand. This helps people with dyslexia immensely, as it's much harder
+to mix up characters when reading, and allows us to read faster.
+
+## Proper Labels & Hiding
+
+Work needs done here. The theme isn't yet reader friendly because the 
+structure of the DOM itself just recently settled. 
+
+## Tab Indexes / Keyboard Shortcuts
+
+This is completely lacking and needs to be implemented
+
+## Motion Reduction
+
+This is done, just permanently off for most things. If you look at Infima
+you'll see more available transitions and you can enable them by setting 
+longer times in `src/_includes/css/theme.css`. 
+
+I personally don't like motion at all (I have a traumatic brain injury), 
+so I'm not going to maintain transition-rich things.
+
+## Responsiveness
+
+We're doing really good here, for the most part. Always room for improvement,
+though, but perhaps that's effort spent on more lacking things.
 
