Turn off draft on second post

--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -2,7 +2,7 @@
 title: "Here Are Some Interactive Features Planned For The First Release:"
 date: 2025-03-05
 author: Tim Post
-draft: true
+draft: false
 layout: layouts/post.vto
 menu:
   visible: true
