Forgot the last section

--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -74,3 +74,12 @@ it to go to email, or even to Discord - it's up to you.
 
 How stored feedback is later displayed and eventually deleted is still up in the air, but I'm 
 leaning toward hooks in Lume's CMS. 
+
+## A Random Quote Server
+
+Or something else that the site can load via `fetch()` that provides something 
+to the visitor. Perhaps use it to load the last few Github commits, or even 
+pull in some posts from Lume's blog. 
+
+When it comes to "demo" things, I try to think of stuff that could easily be
+modified to have some kind of lasting value.
