add link to GH.

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -19,12 +19,11 @@ as I go from one breaking change to another.
   </strong>
 </span>
 
-For now, clone the repo. I'll have a `mod.ts` file and a generator to make some 
-default content pages so that it works as a proper remote theme, but not until
-a lot more stuff is finished.
+For now: [just clone the repo](https://github.com/timthepost/cushytext).
 
-Once you have the repo, the following sets `LUME_DRAFTS` true and starts the Lume 
-local server:
+I'll have a `mod.ts` file and a generator to make some default content pages so that it 
+works as a proper remote theme, but not until a lot more stuff is finished. Once you have 
+he repo, the following sets `LUME_DRAFTS` true and starts the Lume local server:
 
 ```bash
 $ deno task dev
