blog: images need alt and title text

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -33,7 +33,10 @@ to be able to generate docs from many small collections of markdown files, run m
 blog instances with independent archives, build content and landing pages and have 
 interactive features that take advantage of Deno & Deno Deploy ready to use.
 
-<img class="blog_image" src="/uploads/announcing-cushy-text.jpg" alt="" title="" />
+<img class="blog_image" 
+  src="/uploads/announcing-cushy-text.jpg" 
+  alt="A dreamy cloudscape with a flame shaped cloud spark in the middle" 
+  title="A Dreamy Text Template For Lume 3" />
 
 So, I created one! And, I named it Cushy Text!
 
