--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -32,7 +32,10 @@ This isn't a final list, yet, but what I'm narrowing in on. If you have some ide
 me know! I don't want to ship moving parts just for the sake of having more things to 
 fidget with, so I'm really looking at ways to grab more signal from visitors.
 
-<img class="blog_image" src="/uploads/interactive-feature-planning.jpg" alt="" title="" />
+<img class="blog_image" 
+  src="/uploads/interactive-feature-planning.jpg" 
+  alt="A shadowy figure of a man standing next to a crate. A thought bubble reveals many gears working together." 
+  title="Feature Creep Is Real!" />
 
 For most of us, an understanding of our anonymous readers only comes from analytics data;
 they're like cosmic objects that we can't directly observe, just infer with math. I'd like
